--- a/luasrc/view/themes/orion/header.htm
+++ b/luasrc/view/themes/orion/header.htm
@@ -102,12 +102,10 @@ http.prepare_content("text/html; charset=UTF-8")
     </div>
 
     <!-- Sidebar Navigation -->
-    <aside class="sidebar-orion -translate-x-full lg:translate-x-0" id="sidebar">
-        <div class="h-full overflow-y-auto custom-scrollbar">
-            <nav class="p-4 space-y-2" id="mainmenu">
-                <!-- Navigation items will be populated by LuCI -->
-            </nav>
-        </div>
+    <aside class="sidebar-orion -translate-x-full lg:translate-x-0 custom-scrollbar" id="sidebar">
+        <nav class="p-4 space-y-2" id="mainmenu">
+            <!-- Navigation items will be populated by LuCI -->
+        </nav>
     </aside>
 
     <!-- Mobile Menu Overlay -->
@@ -135,11 +133,10 @@ http.prepare_content("text/html; charset=UTF-8")
 
         <!-- Page Content -->
         <div class="flex-1" id="maincontent">
-            <div class="max-w-7xl mx-auto space-y-6">
-                <!-- LuCI Content will be inserted here -->
-                <noscript>
-                    <div class="alert-message warning">
-                        <h4><%:JavaScript required!%></h4>
-                        <p><%:You must enable JavaScript in your browser or LuCI will not work properly.%></p>
-                    </div>
-                </noscript>
+            <!-- LuCI Content will be inserted here -->
+            <noscript>
+                <div class="alert-message warning">
+                    <h4><%:JavaScript required!%></h4>
+                    <p><%:You must enable JavaScript in your browser or LuCI will not work properly.%></p>
+                </div>
+            </noscript>
