--- a/luasrc/view/themes/orion/sysauth.htm
+++ b/luasrc/view/themes/orion/sysauth.htm
@@ -195,7 +195,7 @@
                 <li><%:Password:%> <span class="text-neutral-400"><%:(blank for first time login)%></span></li>
             </ul>
             <p class="text-xs text-neutral-400 mt-4">
-                <%:For first time login, leave password field empty. You can set a password after logging in.%>
+                <%:For first time login, the password is: "orion".You can set a password after logging in.%>
             </p>
         </div>
     </div>
